--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Levels/DevSandbox.DevSandbox
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,9 +10,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Levels/DevSandbox.DevSandbox
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_MainMenuGameMode.BP_MainMenuGameMode_C
+GlobalDefaultGameMode=/Script/Prey.PreyGameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
